# tinge

./: .gitignore  CMakeLists.txt  Doxyfile  Frame.h  README.md  hello.md  renderer-2.cpp
club/: authors.txt
club/meetings/: april_16_2025.md  april_23_2025.md  april_4_2025.md  april_9_2025.md  february_27_2025.md  jan_22_2025.md  jan_24_2025.md  jan_31_2025.md  march_3_2025.md
club/tasks/: task_1.md
src/: bvh.cpp  bvh.h  camera.cpp  camera.h  frame.cpp  frame.h  main.cpp  main.cu  material.h  math.h  mesh.cpp  mesh.h  objects.cpp  objects.h  random.cpp  random.h  renderer.cpp  renderer.h  scene_generator.cpp  scene_generator.h  util.cpp  util.h
src/app/: image.cpp  image.out  task2.cpp
src/core/: array.cuh  core.h  handle.cuh  math.cuh  util.h
src/shapes/: mesh.cuh  ray.cuh  sphere.cuh  triangle.cuh
